# cmake

A-hello-cmake/: CMakeLists.txt  README.md
B-hello-headers/: CMakeLists.txt  README.md
B-hello-headers/src/: main.cpp
D-shared_library/: CMakeLists.txt  README.md
D-shared_library/include/shared/: hello.h
E-install/: CMakeLists.txt
E-install/src/: hello.cpp  main.cpp
H-third_part/: CMakeLists.txt  README.md  main.cpp
I-subFolder/: CMakeLists.txt  README.md
I-subFolder/app/due/: CMakeLists.txt
I-subFolder/app/due/include/sublib1/: sublib1.h
I-subFolder/app/due/src/: sublib1.cpp
I-subFolder/app/tre/: CMakeLists.txt
I-subFolder/app/tre/include/sublib2/: sublib2.h
I-subFolder/app/uno/: CMakeLists.txt  main.cpp
hello/: CMakeLists.txt  main.cpp
